--- a/templates/daemon.json.j2
+++ b/templates/daemon.json.j2
@@ -1,5 +1,6 @@
 {
   "metrics-addr" : "127.0.0.1:9323",
-  "experimental" : true
+  "experimental" : true,
+  "log-opts": {"max-size": "10m", "max-file": "3"}
 }
 
